tests/baselines/reference/moduleVisibilityTest3.errors.txt
tests/cases/compiler/moduleVisibilityTest3.ts(20,22): error TS2304: Cannot find name 'modes'.
tests/cases/compiler/moduleVisibilityTest3.ts(20,39): error TS2694: Namespace '_modes' has no exported member 'Mode'.
tests/cases/compiler/moduleVisibilityTest3.ts(21,22): error TS2694: Namespace '_modes' has no exported member 'Mode'.


==== tests/cases/compiler/moduleVisibilityTest3.ts (3 errors) ====
    module _modes {
     export interface IMode {
      
     }
     
     class Mode {
      
     }
    }
    
    //_modes. // produces an internal error - please implement in derived class
    
    module editor {
     import modes = _modes;
     
     var i : modes.IMode;
      
     // If you just use p1:modes, the compiler accepts it - should be an error
     class Bug {
         constructor(p1: modes, p2: modes.Mode) {// should be an error on p2 - it's not exported
                         ~~~~~
!!! error TS2304: Cannot find name 'modes'.
                                          ~~~~
!!! error TS2694: Namespace '_modes' has no exported member 'Mode'.
             var x:modes.Mode;
                         ~~~~
!!! error TS2694: Namespace '_modes' has no exported member 'Mode'.
         }
        
     }
    }
    